--- a/GenSys/Views/Home/Index.cshtml
+++ b/GenSys/Views/Home/Index.cshtml
@@ -8,49 +8,203 @@
 <hr />
 
 @section Scripts {
-    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    @*<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" >*@
 
-    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
-    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+    @*<script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />*@
+    <script src="~/Scripts/bootstrap-tree/gijgo.min.js"></script>
+    <link href="~/Scripts/bootstrap-tree/gijgo.min.css" rel="stylesheet" type="text/css" />
 
-    <script type="text/javascript" src="/Scripts/camera/LAB.min.js"></script>
-    <script type="text/javascript" for="ipcocx" event="SendMsgToWeb(strMsg)">SendMsgToWeb(strMsg);</script>
+    @*<script type="text/javascript" src="/Scripts/camera/LAB.min.js"></script>
+    <script type="text/javascript" for="ipcocx" event="SendMsgToWeb(strMsg)">SendMsgToWeb(strMsg);</script>*@
 
     <link href="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.css" rel="stylesheet" />
     <script src="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.js"></script>
     <script src="~/Scripts/Bootstrap-Table-1.5.0/locale/bootstrap-table-zh-CN.min.js"></script>
+
+    @*<script src="~/Scripts/jquery-1.7.1.min.js"></script>*@
+    <script src="~/Scripts/webVideoCtrl.js" id="videonode"></script>
+    <script src="~/Scripts/demo.js"></script>
 
     <script>
         //$(function () {
         //    $(function () { $("[data-toggle='popover']").popover(); });
         //});
 
+        var wnd = 0;
+
+        // 初始化
+        $(function () {
+            // 检查插件是否已经安装过
+            var iRet = WebVideoCtrl.I_CheckPluginInstall();
+            if (-1 == iRet) {
+                alert("您还未安装过插件，双击开发包目录里的WebComponentsKit.exe安装！");
+                return;
+            }
+            // 初始化插件参数及插入插件
+            WebVideoCtrl.I_InitPlugin('100%', '100%', {
+                bWndFull: true,
+                iPackageType: 2,
+                iWndowType: 1,
+                cbInitPluginComplete: function () {
+                    WebVideoCtrl.I_InsertOBJECTPlugin("divPlugin");
+                }
+            });
+        })
+
+        function video_login(data) {
+            console.log("enter video_login");
+            initialValue = new Object();
+            initialValue.g_iWndIndex = wnd;
+            initialValue.szDeviceIdentify = '';
+            initialValue.deviceport = '';
+            initialValue.rtspport = '';
+            initialValue.channels = [];
+            initialValue.ip = data.ip;
+            initialValue.port = data.media_port;
+            initialValue.username = data.account;
+            initialValue.password = data.password;
+            //t_init(initialValue);
+            t_login(initialValue);
+        }
+
+        function t_login(initialValue) {
+            console.log("enter t_login");
+
+            console.log(initialValue.ip, initialValue.port, initialValue.username, initialValue.password);
+            if ("" == initialValue.ip || "" == initialValue.port) {
+                return;
+            }
+
+            initialValue.szDeviceIdentify = initialValue.ip + "_" + initialValue.port;
+            WebVideoCtrl.I_Login(initialValue.ip, 1, initialValue.port, initialValue.username, initialValue.password, {
+                success: function (xmlDoc) {
+                    setTimeout(function () {
+                        t_getChannelInfo(initialValue);
+                        t_getDevicePort(initialValue);
+                    }, 10);
+                    setTimeout(function () {
+                        t_StartRealPlay(initialValue);
+                    }, 500)
+                },
+                error: function (status, xmlDoc) { console.log("error"); }
+            });
+        }
+
+        // 获取通道
+        function t_getChannelInfo(initialValue) {
+            console.log("enter t_getChannelInfo");
+
+            initialValue.channels = []
+            if (null == initialValue.szDeviceIdentify) {
+                return;
+            }
+            // 模拟通道
+            WebVideoCtrl.I_GetAnalogChannelInfo(initialValue.szDeviceIdentify, {
+                async: false,
+                success: function (xmlDoc) {
+                    var oChannels = $(xmlDoc).find("VideoInputChannel");
+                    $.each(oChannels, function (i) {
+                        var id = $(this).find("id").eq(0).text(),
+                            name = $(this).find("name").eq(0).text();
+                        if ("" == name) {
+                            name = "Camera " + (i < 9 ? "0" + (i + 1) : (i + 1));
+                        }
+                        initialValue.channels.push({
+                            id: id,
+                            name: name
+                        })
+                    });
+                },
+                error: function (status, xmlDoc) { }
+            });
+        }
+
+        // 获取端口
+        function t_getDevicePort(initialValue) {
+            console.log("enter t_getDevicePort");
+
+            if (null == initialValue.szDeviceIdentify) {
+                return;
+            }
+            var oPort = WebVideoCtrl.I_GetDevicePort(initialValue.szDeviceIdentify);
+            if (oPort != null) {
+                initialValue.deviceport = oPort.iDevicePort;
+                initialValue.rtspport = oPort.iRtspPort;
+            }
+        }
+
+        // 开始预览
+        function t_StartRealPlay(initialValue) {
+            console.log("enter t_StartRealPlay");
+
+            var oWndInfo = WebVideoCtrl.I_GetWindowStatus(initialValue.g_iWndIndex),
+                iChannelID = initialValue.channels[0].value
+
+            if (null == initialValue.szDeviceIdentify) {
+                return;
+            }
+
+            console.log(initialValue.g_iWndIndex);
+            var startRealPlay = function () {
+                WebVideoCtrl.I_StartRealPlay(initialValue.szDeviceIdentify, {
+                    iWndIndex: initialValue.g_iWndIndex,
+                    iRtspPort: initialValue.rtspport,
+                    iStreamType: 1,
+                    iChannelID: iChannelID,
+                    bZeroChannel: false,
+                    success: function () { },
+                    error: function (status, xmlDoc) {
+                        if (403 === status) { } else { }
+                    }
+                });
+            };
+
+            if (oWndInfo != null) { // 已经在播放了，先停止
+                WebVideoCtrl.I_Stop({
+                    success: function () {
+                        startRealPlay();
+                    }
+                });
+            } else {
+                startRealPlay();
+            }
+        }
+
+        function changeWndNum(iType) {
+            iType = parseInt(iType, 10);
+            WebVideoCtrl.I_ChangeWndNum(iType);
+        }
 
         var tree = $('#tree').tree({
-            dataSource: '/Home/GetTree'//[{ text: '磨溪', children: [{ text: '井口区' }, { text: '装置区' }, { text: '大门口' }] }],
+            dataSource: '/Home/GetTree'
+            //dataSource:[{ text: '磨溪', children: [{ text: '井口区' }, { text: '装置区' }, { text: '大门口' }] }]
         });
         tree.on('select', function (e, node, id) {
             var data = tree.getDataById(id);
+            console.log(data.ip);
+            video_login(data);
+            wnd++;
             //alert('select is fired for node with id=' + id + '\t' + 'ip=' + data.ip + '\t' + 'media_port=' + data.media_port + '\t' + 'username=' + data.username + '\t' + 'password=' + data.password);
-            GensysLogin(data.ip, data.media_port, data.username, data.password);
+            ///GensysLogin(data.ip, data.media_port, data.username, data.password);
         });
 
 
-        $LAB.script("/Scripts/camera/pluginVersion.js?version=" + (new Date).getTime())
-            .wait(function () {
-                $LAB.script("/Scripts/camera/jquery-1.11.1.min.js")
-                    //.script("~/js/json.js?version=" + version_web)
-                    .wait(function () {
-                        $LAB.script("/Scripts/camera/common.js?version=" + version_web)
-                            .script("/Scripts/camera/class.js?version=" + version_web)
-                            .script("/Scripts/camera/plugin.js?version=" + version_web)
-                            .wait(function () {
-                                $LAB.script("/Scripts/camera/main.js?version=" + version_web)
-                            })
-                    })
-            })
+        //$LAB.script("/Scripts/camera/pluginVersion.js?version=" + (new Date).getTime())
+        //    .wait(function () {
+        //        $LAB.script("/Scripts/camera/jquery-1.11.1.min.js")
+        //            //.script("~/js/json.js?version=" + version_web)
+        //            .wait(function () {
+        //                $LAB.script("/Scripts/camera/common.js?version=" + version_web)
+        //                    .script("/Scripts/camera/class.js?version=" + version_web)
+        //                    .script("/Scripts/camera/plugin.js?version=" + version_web)
+        //                    .wait(function () {
+        //                        $LAB.script("/Scripts/camera/main.js?version=" + version_web)
+        //                    })
+        //            })
+        //    })
 
 
         function operateFormatter(value, row, index) {
@@ -87,7 +241,7 @@
             //在本函数内定义table变量，会提示不支持bootstrapTable方法
             $table.bootstrapTable('refresh', { url: '/Home/GetAlarm' });
         }
-        //setInterval(myRefreshAlarm, 3000);
+            //setInterval(myRefreshAlarm, 3000);
 
     </script>
 }
@@ -100,29 +254,34 @@
 
     <div class="col-md-10">
         <div class="row">
+            <div id="divPlugin" class="plugin" style="width:100%;height:100%"></div>
+        </div>
+        <div class="row">
             <label class="radio-inline">
-                <input type="radio" name="optionsRadiosinline" id="optionsRadios1" value="option1"> 1画面
+                <input type="radio" name="optionsRadiosinline" id="optionsRadios1" onchange="changeWndNum(this.value);" value="1"> 1画面
             </label>
             <label class="radio-inline">
-                <input type="radio" name="optionsRadiosinline" id="optionsRadios2" value="option2"> 4画面
+                <input type="radio" name="optionsRadiosinline" id="optionsRadios2" onchange="changeWndNum(this.value);" value="2"> 4画面
             </label>
             <label class="radio-inline">
-                <input type="radio" name="optionsRadiosinline" id="optionsRadios3" value="option3"> 8画面
+                <input type="radio" name="optionsRadiosinline" id="optionsRadios3" onchange="changeWndNum(this.value);" value="3"> 9画面
             </label>
             <label class="radio-inline">
-                <input type="radio" name="optionsRadiosinline" id="optionsRadios4" value="option4"> 8画面
+                <input type="radio" name="optionsRadiosinline" id="optionsRadios4" onchange="changeWndNum(this.value);" value="4"> 16画面
             </label>
             <label class="radio-inline">
-                <input type="radio" name="optionsRadiosinline" id="optionsRadios5" value="option5"> 16画面
+                <input type="radio" name="optionsRadiosinline" id="optionsRadios5" onchange="changeWndNum(this.value);" value="5"> 25画面
             </label>
             <label class="radio-inline">
-                <input type="radio" name="optionsRadiosinline" id="optionsRadios6" value="option6"> 25画面
+                <input type="radio" name="optionsRadiosinline" id="optionsRadios6" onchange="changeWndNum(this.value);" value="6"> 36画面
             </label>
             <label class="radio-inline">
-                <input type="radio" name="optionsRadiosinline" id="optionsRadios7" value="option7"> 36画面
+                <input type="radio" name="optionsRadiosinline" id="optionsRadios7" onchange="changeWndNum(this.value);" value="7"> 49画面
+            </label>
+            <label class="radio-inline">
+                <input type="radio" name="optionsRadiosinline" id="optionsRadios8" onchange="changeWndNum(this.value);" value="8"> 64画面
             </label>
         </div><br>
-
         <div class="row">
             @*<button type="button" class="btn btn-default" onclick="GensysLogin('yuanxxn.vicp.net', 18915, 'admin', 'admin')">reload</button>*@
             @*<div id="logout">
@@ -154,10 +313,10 @@
             @*<table id="table-javascript"></table>*@
 
             <table id="alarmTable" data-toggle="table" data-url="/Home/GetAlarm" data-method="get" data-silent="true" data-cache="false"
-                       data-height="520" @*data-classes="table-bordered"*@ data-striped="true"
-                       data-sortable="true" data-sort-name="id" data-sort-order="desc"
-                       data-pagination="true" data-pageSize="20" data-pageList="[10, 25, 50, 100]"
-                       data-search="true" data-show-columns="true" data-show-refresh="true">
+                   data-height="520" @*data-classes="table-bordered"*@ data-striped="true"
+                   data-sortable="true" data-sort-name="id" data-sort-order="desc"
+                   data-pagination="true" data-pageSize="20" data-pageList="[10, 25, 50, 100]"
+                   data-search="true" data-show-columns="true" data-show-refresh="true">
                 <thead>
                     <tr>
                         <th data-field="id" data-sortable="true">序号</th>
