--- a/GenSys/Views/Home/Index.cshtml
+++ b/GenSys/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model GenSys.Models.alarm
+﻿@model GenSys.Models.genbox_alarm
 
 @{
     ViewBag.Title = "风格2 传统监控";
@@ -8,21 +8,17 @@
 <hr />
 
 @section Scripts {
-    @*<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" >*@
-
-    @*<script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
-    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />*@
     <script src="~/Scripts/bootstrap-tree/gijgo.min.js"></script>
     <link href="~/Scripts/bootstrap-tree/gijgo.min.css" rel="stylesheet" type="text/css" />
 
     @*<script type="text/javascript" src="/Scripts/camera/LAB.min.js"></script>
-    <script type="text/javascript" for="ipcocx" event="SendMsgToWeb(strMsg)">SendMsgToWeb(strMsg);</script>*@
-
-    <link href="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.css" rel="stylesheet" />
-    <script src="~/Scripts/Bootstrap-Table-1.5.0/bootstrap-table.min.js"></script>
-    <script src="~/Scripts/Bootstrap-Table-1.5.0/locale/bootstrap-table-zh-CN.min.js"></script>
+        <script type="text/javascript" for="ipcocx" event="SendMsgToWeb(strMsg)">SendMsgToWeb(strMsg);</script>*@
+    
+    @*<link href="https://unpkg.com/bootstrap-table@1.15.5/dist/bootstrap-table.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/bootstrap-table@1.15.5/dist/bootstrap-table.min.js"></script>*@
+    <link href="~/Scripts/bootstrap-table-1.15.5/bootstrap-table.min.css" rel="stylesheet" />
+    <script src="~/Scripts/bootstrap-table-1.15.5/bootstrap-table.min.js"></script>
+    <script src="~/Scripts/bootstrap-table-1.15.5/locale/bootstrap-table-zh-CN.min.js"></script>
 
     @*<script src="~/Scripts/jquery-1.7.1.min.js"></script>*@
     <script src="~/Scripts/webVideoCtrl.js" id="videonode"></script>
@@ -33,7 +29,7 @@
         //    $(function () { $("[data-toggle='popover']").popover(); });
         //});
 
-        var wnd = 0;
+        var wnd = 0
 
         // 初始化
         $(function () {
@@ -178,6 +174,7 @@
             WebVideoCtrl.I_ChangeWndNum(iType);
         }
 
+
         var tree = $('#tree').tree({
             dataSource: '/Home/GetTree'
             //dataSource:[{ text: '磨溪', children: [{ text: '井口区' }, { text: '装置区' }, { text: '大门口' }] }]
@@ -207,41 +204,97 @@
         //    })
 
 
-        function operateFormatter(value, row, index) {
+        var $table = $('#alarmTable')
+
+        function stateFormatter(value, row, index) {
+            if (value == 0) {
+                return [
+                    '<a href="javascript:void(0)" title="未确认" style="color: rgb(255,0,0);">',
+                    '<i class="glyphicon glyphicon-warning-sign"></i>',
+                    '</a>'
+                ].join('');
+            }
+            else {
+                return [
+                    '<a href="javascript:void(0)" title="已确认" style="color: rgb(0,199,140);">',
+                    '<i class="glyphicon glyphicon-warning-sign"></i>',
+                    '</a>'
+                ].join('');
+            }
+        }
+
+        function datetimeFormatter(value, row, index) {
+            //return new Date(parseInt(value.substr(6, 13))).toLocaleString('en-US');
+            var dateVal = value + "";
+            if (value != null) {
+                var date = new Date(parseInt(dateVal.replace("/Date(", "").replace(")/", ""), 10));
+                var month = date.getMonth() + 1 < 10 ? "0" + (date.getMonth() + 1) : date.getMonth() + 1;
+                var currentDate = date.getDate() < 10 ? "0" + date.getDate() : date.getDate();
+                var hours = date.getHours() < 10 ? "0" + date.getHours() : date.getHours();
+                var minutes = date.getMinutes() < 10 ? "0" + date.getMinutes() : date.getMinutes();
+                var seconds = date.getSeconds() < 10 ? "0" + date.getSeconds() : date.getSeconds();
+                return date.getFullYear() + "-" + month + "-" + currentDate + " " + hours + ":" + minutes + ":" + seconds;
+            }
+        }
+
+        function resourceFormatter(value, row, index) {
             return [
-                '<a class="like" href="javascript:void(0)" title="Like">',
-                '<i class="glyphicon glyphicon-heart"></i>',
+                '<a class="vedio" href="javascript:void(0)" title="视频">',
+                '<i class="glyphicon glyphicon-facetime-video"></i>',
                 '</a>',
-                ' <a class="edit ml10" href="javascript:void(0)" title="Edit">',
-                '<i class="glyphicon glyphicon-edit"></i>',
-                '</a>',
-                ' <a class="remove ml10" href="javascript:void(0)" title="Remove">',
-                '<i class="glyphicon glyphicon-remove"></i>',
+                ' <a class="picture" href="javascript:void(0)" title="抓拍">',
+                '<i class="glyphicon glyphicon-picture"></i>',
+                '</a>'
+            ].join('');
+        }
+
+        function checkFormatter(value, row, index) {
+            return [
+                '<a class="check" href="javascript:void(0)" title="确认">',
+                '<i class="glyphicon glyphicon-check"></i>',
                 '</a>'
             ].join('');
         }
 
         window.operateEvents = {
-            'click .like': function (e, value, row, index) {
+            'click .vedio': function (e, value, row, index) {
                 alert('You click like icon, row: ' + JSON.stringify(row));
                 console.log(value, row, index);
             },
-            'click .edit': function (e, value, row, index) {
+            'click .picture': function (e, value, row, index) {
                 alert('You click edit icon, row: ' + JSON.stringify(row));
                 console.log(value, row, index);
             },
-            'click .remove': function (e, value, row, index) {
-                alert('You click remove icon, row: ' + JSON.stringify(row));
-                console.log(value, row, index);
+            'click .check': function (e, value, row, index) {
+                //console.log(value, row, index);
+                //console.log(row["id"]);
+                console.log("/Home/Confirm/" + row.id);
+
+                $.ajax({
+                    url: "/Home/Confirm/" + row.id,    //请求的url地址
+                    async: true,
+                    type: "POST",   //请求方式
+                    success: function (req) {
+                        alert("确认成功！");
+                        $table.bootstrapTable('updateCell', {
+                            index: index,
+                            field: 'is_confirmed',
+                            value: 1
+                        })
+                    },
+                    error: function (req) {
+                        alert("确认失败！");
+                    }
+                });
+
             }
         };
 
-        var $table = $('#alarmTable')
         function myRefreshAlarm() {
             //在本函数内定义table变量，会提示不支持bootstrapTable方法
             $table.bootstrapTable('refresh', { url: '/Home/GetAlarm' });
         }
-            //setInterval(myRefreshAlarm, 3000);
+        //setInterval(myRefreshAlarm, 3000);
 
     </script>
 }
@@ -255,7 +308,8 @@
     <div class="col-md-10">
         <div class="row">
             <div id="divPlugin" class="plugin" style="width:100%;height:100%"></div>
-        </div>
+        </div><br>
+
         <div class="row">
             <label class="radio-inline">
                 <input type="radio" name="optionsRadiosinline" id="optionsRadios1" onchange="changeWndNum(this.value);" value="1"> 1画面
@@ -282,90 +336,88 @@
                 <input type="radio" name="optionsRadiosinline" id="optionsRadios8" onchange="changeWndNum(this.value);" value="8"> 64画面
             </label>
         </div><br>
-        <div class="row">
-            @*<button type="button" class="btn btn-default" onclick="GensysLogin('yuanxxn.vicp.net', 18915, 'admin', 'admin')">reload</button>*@
-            @*<div id="logout">
-                <button type="button" class="btn btn-default" onclick="logout()">reload</button>
-                <button type="button" class="btn btn-warning" title="Popover title"
-                        data-container="body" data-toggle="popover" data-placement="left"
-                        data-content="右侧的 Popover 中的一些内容">
-                    右侧的 Popover
-                </button>
-                <button type="button" class="btn btn-default" title="Popover title"
-                        data-container="body" data-html="true"
-                        data-toggle="popover" data-placement="right"
-                        data-content="<img src='https://b-ssl.duitang.com/uploads/item/201601/13/20160113153414_JcvW3.jpeg' class='img-rounded'>">
-                    显示
-                </button>
-                <a title="" aria-describedby="popover741762" data-original-title="Popover title" data-toggle="popover"
-                    data-content="<img src='D:\CSharp\Gensys\GenSys\Public/AlarmSnap/20190702_101038_1423532192865.jpg' class='img-rounded'>"
-                    data-placement="left" data-container="body" data-html="true">
-                    显示
-                </a>
-            </div>*@
-
-            <br>
-
-            <div class="liveCenter" id="liveOcx"></div>
-        </div><br>
 
         <div class="row">
-            @*<table id="table-javascript"></table>*@
-
             <table id="alarmTable" data-toggle="table" data-url="/Home/GetAlarm" data-method="get" data-silent="true" data-cache="false"
                    data-height="520" @*data-classes="table-bordered"*@ data-striped="true"
                    data-sortable="true" data-sort-name="id" data-sort-order="desc"
                    data-pagination="true" data-pageSize="20" data-pageList="[10, 25, 50, 100]"
-                   data-search="true" data-show-columns="true" data-show-refresh="true">
+                   @*data-search="true" data-show-columns="true" data-show-refresh="true"*@>
                 <thead>
                     <tr>
                         <th data-field="id" data-sortable="true">序号</th>
-                        <th data-field="state" data-sortable="true">状态</th>
+                        <th data-field="is_confirmed" data-formatter="stateFormatter">状态</th>
                         <th data-field="site" data-sortable="true">站点</th>
                         <th data-field="alias" data-sortable="true">摄像机名称</th>
-                        <th data-field="algorithm_id" data-sortable="true">事件类型</th>
-                        <th data-field="datetime" data-sortable="true">报警时间</th>
-                        <th data-field="show_image" data-formatter="operateFormatter" data-events="operateEvents">事件录像</th>
-                        <th data-field="alg_config" data-formatter="operateFormatter" data-events="operateEvents">确认</th>
+                        <th data-field="uuid" data-sortable="true">摄像机uuid</th>
+                        <th data-field="ip" data-sortable="true">摄像机ip</th>
+                        <th data-field="algo_name" data-sortable="true">算法名称</th>
+                        @*<th data-field="algo_value" data-sortable="true">事件类型</th>*@
+                        <th data-field="datetime" data-sortable="true" data-formatter="datetimeFormatter">报警时间</th>
+                        <th data-field="show_image" data-formatter="resourceFormatter" data-events="operateEvents">报警录像</th>
+                        <th data-field="alg_config" data-formatter="checkFormatter" data-events="operateEvents">报警确认</th>
                     </tr>
                 </thead>
             </table>
 
             @*<table class="table">
-                <tr>
-                    <th>序号</th>
-                    <th>状态</th>
-                    <th>站点</th>
-                    <th>摄像机名称/ID</th>
-                    <th>事件类型</th>
-                    <th>报警时间</th>
-                    <th>事件录像</th>
-                    <th>确认</th>
-                </tr>
-
-                @foreach (var item in ViewData["alarm"] as IEnumerable<GenSys.Models.alarm>)
-                {
                     <tr>
-                        <td>@Html.DisplayFor(modelItem => item.id)</td>
-                        <td>@Html.DisplayFor(modelItem => item.state)</td>
-                        <td>@Html.DisplayFor(modelItem => item.site)</td>
-                        <td>@Html.DisplayFor(modelItem => item.alias)</td>
-                        <td>@Html.DisplayFor(modelItem => item.algorithm_id)</td>
-                        <td>@Html.DisplayFor(modelItem => item.datetime)</td>
-                        <td>
-                            <a title="Popover title"
-                                data-container="body" data-html="true"
-                                data-toggle="popover" data-placement="left"
-                                data-content="<img src='@Html.DisplayFor(modelItem => item.image)' class='img-rounded'>">
-                                显示
-                            </a>
-                        </td>
-                        <td>@Html.ActionLink("确认", "Edit", new { id = item.id })</td>
+                        <th>序号</th>
+                        <th>状态</th>
+                        <th>站点</th>
+                        <th>摄像机名称/ID</th>
+                        <th>事件类型</th>
+                        <th>报警时间</th>
+                        <th>事件录像</th>
+                        <th>确认</th>
                     </tr>
-                }
-            </table>*@
+
+                    @foreach (var item in ViewData["alarm"] as IEnumerable<GenSys.Models.alarm>)
+                    {
+                        <tr>
+                            <td>@Html.DisplayFor(modelItem => item.id)</td>
+                            <td>@Html.DisplayFor(modelItem => item.is_confirmed)</td>
+                            <td>@Html.DisplayFor(modelItem => item.site)</td>
+                            <td>@Html.DisplayFor(modelItem => item.alias)</td>
+                            <td>@Html.DisplayFor(modelItem => item.algorithm_id)</td>
+                            <td>@Html.DisplayFor(modelItem => item.datetime)</td>
+                            <td>
+                                <a title="Popover title"
+                                    data-container="body" data-html="true"
+                                    data-toggle="popover" data-placement="left"
+                                    data-content="<img src='@Html.DisplayFor(modelItem => item.image)' class='img-rounded'>">
+                                    显示
+                                </a>
+                            </td>
+                            <td>@Html.ActionLink("确认", "Edit", new { id = item.id })</td>
+                        </tr>
+                    }
+                </table>*@
         </div>
+
+        @*<div class="row">
+                <button type="button" class="btn btn-default" onclick="GensysLogin('yuanxxn.vicp.net', 18915, 'admin', 'admin')">reload</button>
+                <div id="logout">
+                    <button type="button" class="btn btn-default" onclick="logout()">reload</button>
+                    <button type="button" class="btn btn-warning" title="Popover title"
+                            data-container="body" data-toggle="popover" data-placement="left"
+                            data-content="右侧的 Popover 中的一些内容">
+                        右侧的 Popover
+                    </button>
+                    <button type="button" class="btn btn-default" title="Popover title"
+                            data-container="body" data-html="true"
+                            data-toggle="popover" data-placement="right"
+                            data-content="<img src='https://b-ssl.duitang.com/uploads/item/201601/13/20160113153414_JcvW3.jpeg' class='img-rounded'>">
+                        显示
+                    </button>
+                    <a title="" aria-describedby="popover741762" data-original-title="Popover title" data-toggle="popover"
+                        data-content="<img src='D:\CSharp\Gensys\GenSys\Public/AlarmSnap/20190702_101038_1423532192865.jpg' class='img-rounded'>"
+                        data-placement="left" data-container="body" data-html="true">
+                        显示
+                    </a>
+                </div>
+                <br>
+                <div class="liveCenter" id="liveOcx"></div>
+            </div><br>*@
     </div>
 </div>
-
-
